API auth header added
