# src/Dtos/me.ts
@@ -1,0 +1,7 @@
+export interface MeResponse {
+  name: string;
+  loginName: string;
+  provider?: string;
+  email?: string;
+  mobileNo?: string;
+}
